Fix contrast color and css table

--- a/src/app/components/boutique-detail/boutique-detail.component.css
+++ b/src/app/components/boutique-detail/boutique-detail.component.css
@@ -478,6 +478,7 @@ body,
     opacity: 0;
     transform: translateY(20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -748,6 +749,7 @@ body,
     opacity: 0;
     transform: translateY(40px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -1460,13 +1462,14 @@ body,
 
 @media (prefers-reduced-motion: reduce) {
   * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
+    animation-duration: 0.01ms;
+    animation-iteration-count: 1;
+    transition-duration: 0.01ms;
   }
 }
 
 @media (prefers-color-scheme: dark) {
+
   body,
   .boutique-main-container {
     background-color: #1a1a1a;
